# SlideSynth

./: .gitignore  README.md  agent.py  cli.py  config.local.yaml  config.py  config.yaml  pyproject.toml
.github/prompts/: plan-Updatesto be made.prompt.md  plan-slideSynth.prompt.md
.github/skills/deep-agents-core/: SKILL.md
.github/skills/deep-agents-memory/: SKILL.md
.github/skills/deep-agents-orchestration/: SKILL.md
.github/skills/framework-selection/: SKILL.md
.github/skills/langchain-fundamentals/: SKILL.md
.github/skills/langchain-middleware/: SKILL.md
data/memories/: AGENTS.md
server/: app.py  routes.py
skills/design/: SKILL.md
skills/editing/: SKILL.md
skills/planning/: SKILL.md
skills/research/: SKILL.md
skills/slide-generation/: SKILL.md
skills/verification/: SKILL.md
templates/: conclusion.html  content_image_left.html  content_image_right.html  content_text.html  equation_slide.html  full_image.html  table_slide.html  title_slide.html  two_column.html
tools/: __init__.py  asset_manager.py  enhanced_extract.py  export.py  html_generator.py  parse_pdf.py  quality_check.py  verify_plan.py
web/: index.html
web-app/: index.html  package-lock.json  package.json  vite.config.js
web-app/src/: App.vue
web-app/src/assets/: main.css
web-app/src/components/: ActivityBlock.vue  AppSidebar.vue  ChatInput.vue  ChatMessage.vue  ChatPanel.vue  FileNode.vue  FilesTab.vue  InterruptBar.vue  PresentationTab.vue  ProcessTab.vue  PromptInputBox.vue  ResizeHandle.vue  RightPanel.vue  ThinkingBlock.vue  TodoBlock.vue  ToolDetailTab.vue  (+2 more)
(+6 files in other folders)
